<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/sendDataTitle_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:textAlignment="center"
        android:text="@string/send_data"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <EditText
        android:id="@+id/enterName_textView"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:textSize="18sp"
        android:textColor="@color/colorText"
        android:inputType="textPersonName"
        android:hint="@string/enter_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendDataTitle_textView" />

    <EditText
        android:id="@+id/enterCity_textView"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:textSize="18sp"
        android:textColor="@color/colorText"
        android:inputType="textPersonName"
        android:hint="@string/city_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterName_textView" />

    <EditText
        android:id="@+id/enterAge_textView"
        android:layout_width="250dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:textSize="18sp"
        android:textColor="@color/colorText"
        android:inputType="textPersonName"
        android:hint="@string/enter_age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterCity_textView" />



    <Button
        android:id="@+id/sendToA_button"
        android:layout_width="150dp"
        android:layout_height="69dp"
        android:layout_marginTop="25dp"
        android:text="@string/send"
        android:textSize="21sp"
        android:textColor="@color/colorBackground"
        android:background="@color/colorButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterAge_textView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/sendToA_button"
        android:gravity="center"
        android:layout_marginTop="15dp">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="21sp"
            android:textStyle="bold"
            android:text="@string/reviews"
            android:textColor="@color/colorText"
            />
        <TextView
            android:id="@+id/commentIs_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:textStyle="italic"
            android:text=""
            android:textColor="@color/colorText"
            />
        
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>